
name:                cam
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jsinglet/cam#readme
license:             BSD3
license-file:        LICENSE
author:              John L. Singleton
maintainer:          jsinglet@gmail.com
copyright:           2017 John L. Singleton
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable cam
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , template-haskell
                     , mtl
                     , filepath
  default-language:    Haskell2010

test-suite cam-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cam
                     , template-haskell
                     , mtl
                     , filepath
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jsinglet/cam
